--- a/config/locales/po/af/api.po
+++ b/config/locales/po/af/api.po
@@ -3,6 +3,8 @@
 #
 # Translators:
 # Translators:
+# Translators:
+# Christo  du Toit <christo@dutoit.co.uk>, 2014
 # Lewies van der Merwe <lewies.vander@gmail.com>, 2013
 # Wleroux <wnda.van.rooyen@gmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
@@ -32,8 +34,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-12-05 03:10+0000\n"
-"Last-Translator: Lewies van der Merwe <lewies.vander@gmail.com>\n"
+"PO-Revision-Date: 2014-04-07 20:20+0000\n"
+"Last-Translator: Christo  du Toit <christo@dutoit.co.uk>\n"
 "Language-Team: Afrikaans (http://www.transifex.com/projects/p/yv-backend/language/af/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -56,7 +58,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
+"PO-Revision-Date: 2014-03-07 11:00+0000\n"
 "Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Afrikaans (http://www.transifex.com/projects/p/yv-backend/language/af/)\n"
 "MIME-Version: 1.0\n"
@@ -101,23 +103,26 @@ msgstr "{name} het die weergawe, <b>{version}</b> afgelaai"
 msgid "moment.bible.download.self.title"
 msgstr "Jy het die weergawe, <b>{version}</b> afgelaai"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} het plan, <b>{title}</b> begin"
+msgid "moment.plan_subscription.title"
+msgstr "{name} het 'n plan begin"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Jy het die plan, <b>{title}</b> begin"
+msgid "moment.plan_subscription.self.title"
+msgstr "Plan het begin"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} het dag <b>{day}</b> van die plan, <b>{title}</b> voltooi"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} het dag <b>{segment}</b> voltooi van die plan, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Jy het  <b>{day}</b> van die plan, <b>{title}</b> voltooi"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Jy het dag <b>{segment}</b> voltooi van die plan, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} het die plan, <b>{title}</b> voltooi"
+msgid "moment.plan_segment_completion.body"
+msgstr "Dag {segment} van {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Jy het die plan,  <b>{title}</b> voltooi"
+msgid "moment.plan_completion.title"
+msgstr "{name} het 'n plan voltooi"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Plan voltooi"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} het die <b>{title}</b> kenteken verdien"
