--- a/config/locales/po/ar/api.po
+++ b/config/locales/po/ar/api.po
@@ -3,7 +3,8 @@
 #
 # Translators:
 # Translators:
-# Lojaine Arabi <loonita@gmail.com>, 2013
+# Translators:
+# Lojaine Arabi <loonita@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -25,7 +26,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-21 06:50+0000\n"
+"PO-Revision-Date: 2014-04-07 05:10+0000\n"
 "Last-Translator: Lojaine Arabi <loonita@gmail.com>\n"
 "Language-Team: Arabic (http://www.transifex.com/projects/p/yv-backend/language/ar/)\n"
 "MIME-Version: 1.0\n"
@@ -49,8 +50,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-03-03 04:41+0000\n"
+"Last-Translator: Lojaine Arabi <loonita@gmail.com>\n"
 "Language-Team: Arabic (http://www.transifex.com/projects/p/yv-backend/language/ar/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -94,23 +95,26 @@ msgstr "{name} قام بتحميل اصدار <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "قمت بتحميل اصدار, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} بدأ خطة القراءة, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} بدأ خطة قراءة"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "بدأت خطة القراءة, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "بدأ خطة"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} اكمل اليوم<b>{day}</b> من خطة القراءة, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} اكمل اليوم <b>{segment}</b>  من خطة القراءة, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "أكملت اليوم <b>{day}</b> من خطة القراءة, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "أكملت اليوم <b>{segment}</b> من خطة القراءة,  <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} أكمل خطة القراءة, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "يوم {segment} من {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "لثد أكملت خطة القراءة, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} انتهى من خطة القراءة "
+
+msgid "moment.plan_completion.self.title"
+msgstr "لقد أنهيت خطة قراءة"
 
 msgid "moment.badge.earned.title"
 msgstr "{name}حصل على  <b>{title}</b> شارة"
