--- a/config/locales/po/bg/api.po
+++ b/config/locales/po/bg/api.po
@@ -3,15 +3,16 @@
 #
 # Translators:
 # Translators:
+# Translators:
 # fluxa <fluxaa@gmail.com>, 2013
-# Anke Stoye <ankestoyeyouversion@gmail.com>, 2013
+# Anke Stoye <ankestoyeyouversion@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
-# Anke Stoye <ankestoyeyouversion@gmail.com>, 2013
+# Anke Stoye <ankestoyeyouversion@gmail.com>, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
@@ -27,7 +28,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-28 09:30+0000\n"
+"PO-Revision-Date: 2014-04-03 13:30+0000\n"
 "Last-Translator: Anke Stoye <ankestoyeyouversion@gmail.com>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/projects/p/yv-backend/language/bg/)\n"
 "MIME-Version: 1.0\n"
@@ -39,8 +40,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-21 21:47+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-03-13 11:30+0000\n"
+"Last-Translator: Anke Stoye <ankestoyeyouversion@gmail.com>\n"
 "Language-Team: Bulgarian (http://www.transifex.com/projects/p/yv-backend/language/bg/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -96,23 +97,26 @@ msgstr "{name} изтегли версията, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Вие изтеглихте версията, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} започна плана, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} стартиране на плана"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Вие започнахте плана, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Стартиране на плана"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} завърши ден <b>{day}</b> от плана, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} е изпълнил ден <b>{segment}</b> от плана, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Вие завършихте ден <b>{day}</b> от плана, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Вие изпълнихте ден <b>{segment}</b> от плана, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} завърши плана, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Ден {segment} от {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Планът е завършен, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} е изпълнил плана"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Изпълняване на плана"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} спечели <b>{title}</b> значката"
@@ -146,6 +150,21 @@ msgstr "{name} коментира маркираното от вас: “{commen
 
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} коментира вашата бележка: “{comment}”"
+
+msgid "notifications.likes.moment.mine.bookmark"
+msgstr "{name} харесва вашия показалец, {reference_human}"
+
+msgid "notifications.likes.moment.mine.highlight"
+msgstr "{name} харесва вашия акцент, {reference_human}"
+
+msgid "notifications.likes.moment.mine.note.reference"
+msgstr "{name} харесва вашата бележка за {reference_human}"
+
+msgid "notifications.likes.moment.mine.note.title"
+msgstr "{name} харесва вашата бележка, “{title}”"
+
+msgid "notifications.likes.moment.mine.note.no_title_no_reference"
+msgstr "{name} харесва вашата бележка"
 
 msgid "notifications.comments.moments.friend.owner.bookmark"
 msgstr "{moment_owner_name} също коментира техния показалец: “{comment}”"
