--- a/config/locales/po/ca/api.po
+++ b/config/locales/po/ca/api.po
@@ -3,6 +3,8 @@
 #
 # Translators:
 # Translators:
+# Translators:
+# doktorkampi, 2014
 # mguerola <mireia.guerola@gmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -16,8 +18,8 @@
 #
 # Translators:
 # Translators:
-# doktorkampi <doktorkampi@gmail.com>, 2013
-# doktorkampi <doktorkampi@gmail.com>, 2013
+# doktorkampi, 2013
+# doktorkampi, 2013
 # mguerola <mireia.guerola@gmail.com>, 2013
 # mguerola <mireia.guerola@gmail.com>, 2013
 #, fuzzy
@@ -27,8 +29,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-26 14:32+0000\n"
-"Last-Translator: mguerola <mireia.guerola@gmail.com>\n"
+"PO-Revision-Date: 2014-04-12 17:10+0000\n"
+"Last-Translator: doktorkampi\n"
 "Language-Team: Catalan (http://www.transifex.com/projects/p/yv-backend/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -96,23 +98,26 @@ msgstr "{name} ha descarregat la versió, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Has descarregat la versió, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} ha començat el pla de lectura, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} ha començat un pla de lectura"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Has començat el pla de lectura, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Ha començat un pla de lectura"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} ha completat el dia <b>{day}</b> del pla de lectura, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} ha completat el dia <b>{segment}</b> del pla de lectura, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Has completat el dia <b>{day}</b> del pla de lectura, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Has completat el dia <b>{segment}</b> del pla de lectura, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} ha acabat el pla de lectura, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Dia {segment} de {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Has acabat el pla de lectura, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} ha acabat un pla de lectura"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Pla de lectura finalitzat"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} ha aconseguit la insígnia <b>{title}</b>"
