--- a/config/locales/po/cs/api.po
+++ b/config/locales/po/cs/api.po
@@ -3,7 +3,10 @@
 #
 # Translators:
 # Translators:
+# Translators:
 # marek.lisy <marek.lisy@centrum.cz>, 2014
+# marek.lisy <marek.lisy@centrum.cz>, 2014
+# Radek Ćmiel <radek@element.cx>, 2014
 # liveguard <youversion@jezkovi.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -19,6 +22,7 @@
 #
 # Translators:
 # Translators:
+# Aszturc <adam.szturc@gmail.com>, 2014
 # marek.lisy <marek.lisy@centrum.cz>, 2013
 # marek.lisy <marek.lisy@centrum.cz>, 2013
 # Milan Kramoliš <timdruhym@gmail.com>, 2013
@@ -31,8 +35,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-01-04 21:10+0000\n"
-"Last-Translator: marek.lisy <marek.lisy@centrum.cz>\n"
+"PO-Revision-Date: 2014-04-10 07:22+0000\n"
+"Last-Translator: Radek Ćmiel <radek@element.cx>\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/yv-backend/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -55,8 +59,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-03-27 19:41+0000\n"
+"Last-Translator: Aszturc <adam.szturc@gmail.com>\n"
 "Language-Team: Czech (http://www.transifex.com/projects/p/yv-backend/language/cs/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -100,23 +104,26 @@ msgstr "{name} stáhl překlad <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Stáhli jste překlad <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} zahájil plán <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} začal plán"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Zahájili jste plán <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Začali jste plán"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} dokončil den <b>{day}</b> plánu <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} dokončil den <b>{segment}</b> plánu <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Dokončili jste den <b>{day}</b> plánu <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Dokončili jste den  <b>{segment}</b> plánu <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} dokončil plán <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Den {segment} z {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Dokončili jste plán <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} dokončil/a plán"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Dokončili jste plán"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} získal odznak <b>{title}</b>"
@@ -231,7 +238,7 @@ msgid "share.invite_twitter_direct"
 msgstr "Už máš aplikaci Bible od @YouVersion? Mě se moc líbí a myslím si, že by se líbila i Tobě. Tady je odkaz:"
 
 msgid "share.invite_facebook"
-msgstr "Mám moc rád aplikaci Bible! Pomohla mi k tomu, aby se Bible stala každodenní součástí mého života. Můžu tam zvýraznit verše, poslechnout si audio Bible, udělat si poznámky, číst podle plánu.. .dokonce sledovat videa! Určitě si ji můžeše hned stáhnout (je zdarma): "
+msgstr "Mám moc rád aplikaci Bible! Pomohla mi k tomu, aby se Bible stala každodenní součástí mého života. Můžu tam zvýraznit verše, poslechnout si audio Bible, udělat si poznámky, číst podle plánu.. .dokonce sledovat videa! Určitě si ji můžete hned stáhnout (je zdarma): "
 
 msgid "share.invite_facebook_direct"
-msgstr "Už máš aplikaci Bible? Mě se moc líbí a myslím si, že by se líbila i Tobě. Tady je odkaz:"
+msgstr "Už máš aplikaci Bible? Mně se moc líbí a myslím si, že by se líbila i Tobě. Tady je odkaz:"
