--- a/config/locales/po/en_GB/api.po
+++ b/config/locales/po/en_GB/api.po
@@ -3,7 +3,8 @@
 #
 # Translators:
 # Translators:
-# Susan <susan.howe84@gmail.com>, 2013
+# Translators:
+# Susan <susan.howe84@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -16,7 +17,7 @@
 #
 # Translators:
 # Translators:
-# Susan <susan.howe84@gmail.com>, 2013
+# Susan <susan.howe84@gmail.com>, 2013-2014
 # Susan <susan.howe84@gmail.com>, 2013
 #, fuzzy
 msgid ""
@@ -25,7 +26,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-18 15:10+0000\n"
+"PO-Revision-Date: 2014-04-03 09:50+0000\n"
 "Last-Translator: Susan <susan.howe84@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/yv-backend/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -49,7 +50,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 20:18+0000\n"
+"PO-Revision-Date: 2014-03-28 10:40+0000\n"
 "Last-Translator: Susan <susan.howe84@gmail.com>\n"
 "Language-Team: English (United Kingdom) (http://www.transifex.com/projects/p/yv-backend/language/en_GB/)\n"
 "MIME-Version: 1.0\n"
@@ -94,23 +95,26 @@ msgstr "{name} downloaded the version, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "You downloaded the version, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} started the plan, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} started a plan"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "You started the plan, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Started a plan"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} completed day <b>{day}</b> of the plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} completed day <b>{segment}</b> of the plan, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "You completed day <b>{day}</b> of the plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "You completed day <b>{segment}</b> of the plan, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} completed the plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Day {segment} of {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "You completed the plan, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} completed a plan"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Completed a plan"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} earned the <b>{title}</b> badge"
@@ -218,7 +222,7 @@ msgstr ""
 "You can get it (free!) for pretty much any mobile device here:"
 
 msgid "share.invite_twitter"
-msgstr "The Bible App from @YouVersion has a permanent spot on my home screen. Read, watch, listen, and share...all in a free app:"
+msgstr "The @YouVersion Bible App has a permanent spot on my home screen. Read, watch, listen, and share…all in a free app:"
 
 msgid "share.invite_twitter_direct"
 msgstr "Do you have the Bible App from @YouVersion? I love it, and I think you would too. Here's the link:"
