--- a/config/locales/po/es_ES/api.po
+++ b/config/locales/po/es_ES/api.po
@@ -3,7 +3,8 @@
 #
 # Translators:
 # Translators:
-# ordaks <manuelordax@me.com>, 2013
+# Translators:
+# ordaks <manuelordax@me.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -30,8 +31,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-16 07:37+0000\n"
-"Last-Translator: DavidEsteve <david.drummer.93@gmail.com>\n"
+"PO-Revision-Date: 2014-04-05 16:58+0000\n"
+"Last-Translator: meralemar <meralemar@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/yv-backend/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,8 +55,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-03-06 13:53+0000\n"
+"Last-Translator: DavidEsteve <david.drummer.93@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/yv-backend/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -99,23 +100,26 @@ msgstr "{name} descargó la versión, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Descargaste la versión, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} comenzó el plan, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} comenzó un plan de lectura"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Comenzaste el plan, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Comenzó un plan de lectura"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} completó el día <b>{day}</b> del plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} completó el día <b>{segment}</b> del plan de lectura <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Completaste el día <b>{day}</b> del plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Completaste el día <b>{segment}</b> del plan de lectura <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} completó el plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Día {segment} de {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Completaste el plan, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} completó un plan de lectura"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Completó un plan de lectura"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} ganó una insignia <b>{title}</b>"
