--- a/config/locales/po/fr/api.po
+++ b/config/locales/po/fr/api.po
@@ -3,6 +3,8 @@
 #
 # Translators:
 # Translators:
+# Translators:
+# spica <david.e.blanc@gmail.com>, 2014
 # spica <david.e.blanc@gmail.com>, 2013
 # francois delp <francoisdelp@gmail.com>, 2013
 # KONANDELPHIN <ankondelph@yahoo.fr>, 2013
@@ -13,6 +15,7 @@
 # Translators:
 # Translators:
 # Translators:
+# Anke Stoye <ankestoyeyouversion@gmail.com>, 2014
 # spica <david.e.blanc@gmail.com>, 2014
 # francois delp <francoisdelp@gmail.com>, 2013-2014
 # KONANDELPHIN <ankondelph@yahoo.fr>, 2013
@@ -23,6 +26,7 @@
 # Translators:
 # Anke Stoye <ankestoyeyouversion@gmail.com>, 2013
 # Axers Consulting <rameaubaby@gmail.com>, 2013
+# spica <david.e.blanc@gmail.com>, 2014
 # spica <david.e.blanc@gmail.com>, 2013
 # francois delp <francoisdelp@gmail.com>, 2013
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
@@ -35,8 +39,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-19 10:30+0000\n"
-"Last-Translator: francois delp <francoisdelp@gmail.com>\n"
+"PO-Revision-Date: 2014-04-03 07:00+0000\n"
+"Last-Translator: spica <david.e.blanc@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/yv-backend/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -47,8 +51,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-26 19:30+0000\n"
-"Last-Translator: francois delp <francoisdelp@gmail.com>\n"
+"PO-Revision-Date: 2014-04-16 08:10+0000\n"
+"Last-Translator: spica <david.e.blanc@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/yv-backend/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -59,8 +63,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-03-03 09:10+0000\n"
+"Last-Translator: spica <david.e.blanc@gmail.com>\n"
 "Language-Team: French (http://www.transifex.com/projects/p/yv-backend/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -104,23 +108,26 @@ msgstr "{name} a téléchargé la version, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Vous avez téléchargé la version, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} a commencé le Plan, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} a démarré un plan"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Vous avez commencé le Plan, <b>{title}</b> "
+msgid "moment.plan_subscription.self.title"
+msgstr "Plan démarré"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} a terminé le jour <b>{day}</b> du plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} a terminé le jour <b>{segment}</b> du plan, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Vous avez terminé le jour <b>{day}</b> du plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Vous avez terminé le jour <b>{segment}</b> du plan, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} a terminé  le plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Jour {segment} de {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Vous avez terminé  le plan, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} a terminé un plan"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Plan terminé"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} a gagné le badge <b>{title}</b>"
@@ -135,22 +142,22 @@ msgid "moment.video.watched.self.title"
 msgstr "Vous avez regardé <b>{title}</b>"
 
 msgid "notifications.friendships.offer"
-msgstr "{name} veut être ton ami sur YouVersion"
+msgstr "{name} veut être votre ami sur YouVersion"
 
 msgid "notifications.friendships.accept"
-msgstr "{name} a accepté ta demande d'ami"
+msgstr "{name} a accepté votre demande d'ami"
 
 msgid "notifications.friendships.nowfriends"
-msgstr "{name} est ton ami maintenant"
+msgstr "{name} est votre ami maintenant"
 
 msgid "notifications.friendships.suggestion"
-msgstr "Veux tu être amis avec {name} sur YouVersion?"
+msgstr "Voulez-vous être amis avec {name} sur YouVersion?"
 
 msgid "notifications.comments.moment.mine.bookmark"
 msgstr "{name} a commenté votre favori : \"{comment}\""
 
 msgid "notifications.comments.moment.mine.highlight"
-msgstr "{name} a commenté votre centre d’intérêt: \"{comment}\";"
+msgstr "{name} a commenté votre centre d’intérêt: \"{comment}\""
 
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} a commenté votre annotation: \"{comment}\""
@@ -171,22 +178,22 @@ msgid "notifications.likes.moment.mine.note.no_title_no_reference"
 msgstr "{name} aime votre note"
 
 msgid "notifications.comments.moments.friend.owner.bookmark"
-msgstr "{moment_owner_name} a également commenté leur favori : \"{comment}\""
+msgstr "{moment_owner_name} a également commenté son favori : \"{comment}\""
 
 msgid "notifications.comments.moments.friend.bookmark"
 msgstr "{commenter_name} a également commenté le favori de {moment_owner_name} “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.highlight"
-msgstr "{moment_owner_name} a également commenté leur centre d’intérêt : “{comment}”"
+msgstr "{moment_owner_name} a également commenté sa surbrillance : “{comment}”"
 
 msgid "notifications.comments.moments.friend.highlight"
-msgstr "{commenter_name} a également commenté le centre d'intérêt de {moment_owner_name}: “{comment}”"
+msgstr "{commenter_name} a également commenté la surbrillance de {moment_owner_name}: “{comment}”"
 
 msgid "notifications.comments.moments.friend.owner.note"
-msgstr "{moment_owner_name} a également commenté leur annotation: “{comment}”"
+msgstr "{moment_owner_name} a également commenté sa note : “{comment}”"
 
 msgid "notifications.comments.moments.friend.note"
-msgstr "{commenter_name} a également commenté l'annotation de  {moment_owner_name}: “{comment}”"
+msgstr "{commenter_name} a également commenté la note de  {moment_owner_name}: “{comment}”"
 
 msgid "notifications.moments.create.bookmark"
 msgstr "{name} a mis en favori {reference_human}"
@@ -213,28 +220,28 @@ msgid "notifications.system.test"
 msgstr "Téléchargez maintenant notre Bible App pour enfants !!!"
 
 msgid "share.invite_sms_prefix"
-msgstr "De {name}:"
+msgstr "De {name} :"
 
 msgid "share.invite_sms"
-msgstr "As-tu la Bible App de YouVersion ? J'en suis fan et je suis sûr qu'elle te plairait aussi. Voici le lien:"
+msgstr "Est-ce que tu as la Bible App de YouVersion ? J'en suis fan et je suis sûr qu'elle te plairait aussi. Voici le lien :"
 
 msgid "share.invite_email_subject"
 msgstr "Est-ce que tu as la Bible App ?"
 
 msgid "share.invite_email_body"
 msgstr ""
-"J'apprécie énormément la Bible App de YouVersion et ai pensé qu'elle te plairait aussi. J'ouvre beaucoup plus la Bible ces derniers temps vu l'aisance avec laquelle je peux lire, regarder, écouter et partager. Elle a même des Plans de lecture qui proposent une sélection de lectures bibliques qui m'attendent chaque jour.\n"
+"J'apprécie énormément la Bible App de YouVersion et j'ai pensé qu'elle te plairait aussi. J'ouvre beaucoup plus la Bible ces derniers temps vu la facilité avec laquelle je peux lire, regarder, écouter et partager. Elle a même des Plans de lecture qui proposent une sélection de lectures bibliques qui m'attendent chaque jour.\n"
 "\n"
-"Tu peux l'avoir (gratuitement) pratiquement sur tout type de mobile ici:"
+"Tu peux l'avoir (gratuitement) pratiquement sur tout type de mobile ici :"
 
 msgid "share.invite_twitter"
-msgstr "La Bible App de @YouVersion a une touche permanente sur ma page d'accueil. Lire, regarder, écouter et partager... le tout dans une app gratuite :"
+msgstr "La Bible App de @YouVersion a un raccourci permanent sur ma page d'accueil. Lire, regarder, écouter et partager... le tout dans une app gratuite :"
 
 msgid "share.invite_twitter_direct"
-msgstr "As-tu la Bible App de @YouVersion ? J'en suis fan et je suis sûr qu'elle te plairait aussi. Voici le lien:"
+msgstr "Est-ce que tu as la Bible App de @YouVersion ? J'en suis fan et je suis sûr qu'elle te plairait aussi. Voici le lien :"
 
 msgid "share.invite_facebook"
 msgstr "Je suis fan de la Bible App ! Elle m'a vraiment aidé à faire de la Bible une partie intégrante de ma vie quotidienne. Elle me permet de surligner, écouter des Bibles audio, prendre des notes, suivre des plans de méditations... même regarder des vidéos ! Télécharge-là dès maintenant (c'est gratuit) :"
 
 msgid "share.invite_facebook_direct"
-msgstr "As-tu la Bible App ? J'en suis fan et je suis sûr qu'elle te plairait aussi. Voici le lien:"
+msgstr "Est-ce que tu as la Bible App ? J'en suis fan et je suis sûr qu'elle te plairait aussi. Voici le lien :"
