--- a/config/locales/po/hu/api.po
+++ b/config/locales/po/hu/api.po
@@ -3,13 +3,19 @@
 #
 # Translators:
 # Translators:
+# Translators:
+# Anke Stoye <ankestoyeyouversion@gmail.com>, 2014
+# Csaba Sóti, 2014
+# Gabi Veres <vegbor1@gmail.com>, 2014
 # IlonaKoncz <konczica@gmail.com>, 2013-2014
+# mississippi44 <petrik.hermina@gmail.com>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
+# Anke Stoye <ankestoyeyouversion@gmail.com>, 2014
 # lohnszabolcs <lohnszabolcs+transifex@gmail.com>, 2013-2014
 # mississippi44 <petrik.hermina@gmail.com>, 2013
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
@@ -30,8 +36,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-01-02 01:35+0000\n"
-"Last-Translator: IlonaKoncz <konczica@gmail.com>\n"
+"PO-Revision-Date: 2014-04-16 13:20+0000\n"
+"Last-Translator: Gabi Veres <vegbor1@gmail.com>\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/yv-backend/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -42,8 +48,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-24 11:23+0000\n"
-"Last-Translator: lohnszabolcs <lohnszabolcs+transifex@gmail.com>\n"
+"PO-Revision-Date: 2014-04-16 13:16+0000\n"
+"Last-Translator: Gabi Veres <vegbor1@gmail.com>\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/yv-backend/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,8 +60,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-04-16 13:17+0000\n"
+"Last-Translator: Gabi Veres <vegbor1@gmail.com>\n"
 "Language-Team: Hungarian (http://www.transifex.com/projects/p/yv-backend/language/hu/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,13 +76,13 @@ msgid "moment.system.bible_series_promo.body"
 msgstr "Nézd meg ma este a  <i>Biblia sorozatot</i>! "
 
 msgid "moment.bookmark.title"
-msgstr "{name} könyvjelzővel megjelölt <b>{reference_human}</b>"
+msgstr "{name} könyvjelzővel megjelölte a/z <b>{reference_human}</b>"
 
 msgid "moment.bookmark.self.title"
 msgstr "Könyvjelzővel megjelölted <b>{reference_human}</b>"
 
 msgid "moment.friendship.title"
-msgstr "{user_name} most már barátja <b>{friend_name}</b>"
+msgstr "{user_name} és <b>{friend_name}</b> most már barátok"
 
 msgid "moment.friendship.self.title"
 msgstr "<b>{friend_name}</b> mostantól a barátod lett"
@@ -99,23 +105,26 @@ msgstr "{name} letöltötte a <b>{version}</b> verziót"
 msgid "moment.bible.download.self.title"
 msgstr "Letöltötted a <b>{version}</b> verziót"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} elkezdte a tervet, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} elkezdett egy tervet"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Elkezdted a <b>{title}</b> tervet"
+msgid "moment.plan_subscription.self.title"
+msgstr "Terv elkezdve"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} befejezett nap <b>{day}</b> a tervből, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} befejezte a <b>{segment}</b> napot a <b>{title}</b> tervből"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Befejezett napod <b>{day}</b> a <b>{title}</b> tervből"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Befejezted a <b>{segment}</b> napot a <b>{title}</b> tervből"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} befejezte a tervet, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "{segment}. nap a {total_segments}-ból/-ből ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Befejezted a tervet, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} teljesítette a tervet"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Teljesített egy tervet"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} megszerezte <b>{title}</b> jelvényt"
@@ -151,16 +160,16 @@ msgid "notifications.comments.moment.mine.note"
 msgstr "{name} hozzászólt a jegyzetedhez: “{comment}”"
 
 msgid "notifications.likes.moment.mine.bookmark"
-msgstr "{name} kedveli a könyvjelződ, {reference_human}"
+msgstr "{name} kedveli a könyvjelződ: {reference_human}"
 
 msgid "notifications.likes.moment.mine.highlight"
-msgstr "{name} kedveli a kiemelésed, {reference_human}"
+msgstr "{name} kedveli a kiemelésed: {reference_human}"
 
 msgid "notifications.likes.moment.mine.note.reference"
 msgstr "{name} kedveli a {reference_human}-hez fűzött jegyzeted"
 
 msgid "notifications.likes.moment.mine.note.title"
-msgstr "{name} kedveli a jegyzeted, “{title}”"
+msgstr "{name} kedveli a jegyzeted: “{title}”"
 
 msgid "notifications.likes.moment.mine.note.no_title_no_reference"
 msgstr "{name} kedveli a jegyzeted"
