--- a/config/locales/po/ja/api.po
+++ b/config/locales/po/ja/api.po
@@ -3,7 +3,8 @@
 #
 # Translators:
 # Translators:
-# Tomomi Galeano <tomomi.galeano@gmail.com>, 2013
+# Translators:
+# Tomomi Galeano <tomomi.galeano@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -18,7 +19,7 @@
 # Translators:
 # Translators:
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# Tomomi Galeano <tomomi.galeano@gmail.com>, 2013
+# Tomomi Galeano <tomomi.galeano@gmail.com>, 2013-2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -26,7 +27,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-21 00:51+0000\n"
+"PO-Revision-Date: 2014-04-10 01:30+0000\n"
 "Last-Translator: Tomomi Galeano <tomomi.galeano@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/projects/p/yv-backend/language/ja/)\n"
 "MIME-Version: 1.0\n"
@@ -50,8 +51,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-04-05 03:20+0000\n"
+"Last-Translator: Tomomi Galeano <tomomi.galeano@gmail.com>\n"
 "Language-Team: Japanese (http://www.transifex.com/projects/p/yv-backend/language/ja/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -72,10 +73,10 @@ msgid "moment.bookmark.self.title"
 msgstr "<b>{reference_human}</b>にブックマークしました"
 
 msgid "moment.friendship.title"
-msgstr "{user_name}さんと<b>{friend_name}</b>さんが友達になりました"
+msgstr "{user_name}さんに新しいお友達ができました。<b>{friend_name}</b>さん"
 
 msgid "moment.friendship.self.title"
-msgstr "<b>{friend_name}</b>さんと友達になりました"
+msgstr "お友達になりました：<b>{friend_name}</b>さん"
 
 msgid "moment.highlight.title"
 msgstr "{name}さんが<b>{reference_human}</b>にハイライトしました"
@@ -95,23 +96,26 @@ msgstr "{name}さんが<b>{version}</b>をダウンロードしました"
 msgid "moment.bible.download.self.title"
 msgstr "<b>{version}</b>をダウンロードしました"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name}さんが「<b>{title}</b>」の読書プランを始めました"
+msgid "moment.plan_subscription.title"
+msgstr "{name}さんが読書プランを開始しました"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "「<b>{title}</b>」の読書プランを始めました"
+msgid "moment.plan_subscription.self.title"
+msgstr "プランを開始しました"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name}さんが「<b>{title}</b>」読書プランの<b>{day}</b>を完了しました"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name}さんが、読書プラン「<b>{title}</b>」の<b>{segment}</b>日目を完了しました。"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "「<b>{title}</b>」読書プランの<b>{day}</b>を完了しました"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "読書プラン「<b>{title}</b>」の<b>{segment}</b>日目を完了しました。"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name}さんが「<b>{title}</b>」の読書プランを完了しました"
+msgid "moment.plan_segment_completion.body"
+msgstr "{total_segments}日中の{segment}日({percent_complete}%完了)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "「<b>{title}</b>」の読書プランを完了しました"
+msgid "moment.plan_completion.title"
+msgstr "{name}さんが読書プランを完了しました"
+
+msgid "moment.plan_completion.self.title"
+msgstr "読書プランを完了しました"
 
 msgid "moment.badge.earned.title"
 msgstr "{name}さんが「<b>{title}</b>」バッジを獲得しました"
@@ -206,25 +210,25 @@ msgid "share.invite_sms_prefix"
 msgstr "{name}より："
 
 msgid "share.invite_sms"
-msgstr "YouVersionの聖書アプリをお持ちですか？私のお気に入りのアプリなので、きっと気に入っていただけるかなと思います。お持ちでなければ、このリンクからどうぞ："
+msgstr "YouVersionの聖書アプリをお持ちですか？私のお気に入りのアプリなので、きっと気に入っていただけるかなと思います。このリンクからどうぞ："
 
 msgid "share.invite_email_subject"
 msgstr "聖書アプリをお持ちですか？"
 
 msgid "share.invite_email_body"
 msgstr ""
-"私もYouVersionの聖書アプリを大活用しているので、あなたにも気に入っていただけるかなと思っています。コンテンツを読んだり、見たり、聞いたり、シェアするのが簡単なので、最近はより頻繁に聖書を開くようになりました。読書プランというものもあって、プランに沿った聖句が毎日、用意されています。\n"
+"YouVersionの聖書アプリを大活用しています。あなたにも気に入っていただけるかな。コンテンツを読んだり、見たり、聞いたり、シェアするのが簡単なので、最近はより頻繁に聖書を開くようになりました。読書プランというものもあって、プランに沿った聖句が毎日、用意されています。\n"
 "\n"
 "様々な携帯用のアプリ ( 無料！) をこちらからダウンロードできます："
 
 msgid "share.invite_twitter"
-msgstr "@YouVersionの聖書アプリは、いつでもホームスクリーンから使えるようにしています。読んだり、見たり、聞いたり、シェアしたり…全てが可能な無料のアプリです："
+msgstr "@YouVersionの聖書アプリを、いつでもホームスクリーンから使えるようにしています。読んだり、見たり、聞いたり、シェアしたり…全てが可能な無料のアプリです："
 
 msgid "share.invite_twitter_direct"
-msgstr "@YouVersionの聖書アプリをお持ちですか？私のお気に入りのアプリなので、きっと気に入っていただけるかなと思います。お持ちでなければ、このリンクからどうぞ："
+msgstr "@YouVersionの聖書アプリをお持ちですか？私のお気に入りのアプリなので、きっと気に入っていただけるかなと思います。このリンクからどうぞ："
 
 msgid "share.invite_facebook"
 msgstr "聖書アプリをとても気に入っています！このアプリのお陰で聖書を日々の生活の一環に取り入れることが可能になりました。聖句にハイライトを入れたり、音読聖書を聞いたり、ノートをとったり、読書プランを利用したり…なんとビデオを見ることまでできるのです！今すぐダウンロードしてみましょう (無料です)："
 
 msgid "share.invite_facebook_direct"
-msgstr "聖書アプリをお持ちですか？私のお気に入りのアプリなので、きっと気に入っていただけるかなと思います。お持ちでなければ、このリンクからどうぞ："
+msgstr "聖書アプリをお持ちですか？私のお気に入りのアプリなので、きっと気に入っていただけるかなと思います。このリンクからどうぞ："
