--- a/config/locales/po/mk/api.po
+++ b/config/locales/po/mk/api.po
@@ -3,7 +3,10 @@
 #
 # Translators:
 # Translators:
+# Translators:
+# arsov <dejanarsov@gmail.com>, 2014
 # Denis Aleksandrov <denal05@gmail.com>, 2013
+# martinnaskovski <martin@naskovski.info>, 2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -17,6 +20,7 @@
 #
 # Translators:
 # Translators:
+# arsov <dejanarsov@gmail.com>, 2014
 # Denis Aleksandrov <denal05@gmail.com>, 2013
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
 #, fuzzy
@@ -26,8 +30,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-17 21:51+0000\n"
-"Last-Translator: Denis Aleksandrov <denal05@gmail.com>\n"
+"PO-Revision-Date: 2014-04-05 01:50+0000\n"
+"Last-Translator: arsov <dejanarsov@gmail.com>\n"
 "Language-Team: Macedonian (http://www.transifex.com/projects/p/yv-backend/language/mk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,8 +54,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-04-05 02:20+0000\n"
+"Last-Translator: arsov <dejanarsov@gmail.com>\n"
 "Language-Team: Macedonian (http://www.transifex.com/projects/p/yv-backend/language/mk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -95,23 +99,26 @@ msgstr "{name} ја презема верзијата, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Вие ја преземавте верзијата, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} го започна планот, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} почна план"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Вие го започнавте планот, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Почна план"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} го заврши денот <b>{day}</b> од планот, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} го заврши ден <b>{segment}</b> од планот, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Вие го завршивте денот <b>{day}</b> од планот, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Го заврши ден <b>{segment}</b> од планот, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} го заврши планот, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Ден {segment} од вкупно {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Вие го завршивте планот, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} заврши план"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Заврши план"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} го заработи беџот <b>{title}</b>"
@@ -228,4 +235,4 @@ msgid "share.invite_facebook"
 msgstr "Ептен ми се допаѓа апликацијата „Библија“! Навистина ми има помогнато да ја направам Библијата дел од моето секојдневие. Можам да нагласувам, подвлекувам, обележувам, можам да слушам Библијата во аудио формат, можам да си пишувам белешки, да следам Планови за читање... дури можам и да гледам видеа! Преземи ја тука (бесплатна е):"
 
 msgid "share.invite_facebook_direct"
-msgstr "Дали ја имаш апликацијата „Библија“ од YouVersion? Многу ми се допаѓа и мислам дека и на тебе ќе ти се допадне. Можеш да ја преземеш од тука:"
+msgstr "Дали ја имаш апликацијата „Библија“? Многу ми се допаѓа и мислам дека и на тебе ќе ти се допадне. Можеш да ја преземеш од тука:"
