--- a/config/locales/po/no/api.po
+++ b/config/locales/po/no/api.po
@@ -3,8 +3,9 @@
 #
 # Translators:
 # Translators:
+# Translators:
 # Per Byrknes <pbyrknes@norea.no>, 2013
-# Terje Bøe <terje.boee@lyse.net>, 2013
+# Terje Bøe <terje.boee@lyse.net>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -30,7 +31,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-26 14:32+0000\n"
+"PO-Revision-Date: 2014-04-04 10:00+0000\n"
 "Last-Translator: Terje Bøe <terje.boee@lyse.net>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/yv-backend/language/no/)\n"
 "MIME-Version: 1.0\n"
@@ -54,8 +55,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-04-04 09:54+0000\n"
+"Last-Translator: Terje Bøe <terje.boee@lyse.net>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/yv-backend/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -99,23 +100,26 @@ msgstr "{name} lastet ned versjonen <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Du lastet ned versjonen, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} begynte på leseplanen <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} begynte på en leseplan"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Du begynte på leseplanen <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Begynte på en leseplan"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} fullførte dag <b>{day}</b> av leseplanen <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} fullførte dag <b>{segment}</b> av leseplanen, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Du fullførte dag <b>{day}</b> av leseplanen <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Du fullførte dag <b>{segment}</b> av leseplanen, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} fullførte leseplanen <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Dag {segment} av {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Du fullførte leseplanen <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} fullførte en leseplan"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Fullførte en leseplan"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} oppnådde <b>{title}</b> merket"
