--- a/config/locales/po/pl/api.po
+++ b/config/locales/po/pl/api.po
@@ -3,7 +3,9 @@
 #
 # Translators:
 # Translators:
-# Sebastian Ferdyn <sferdyn@gmail.com>, 2013
+# Translators:
+# Oliwer C <oliwerc@gmail.com>, 2014
+# Sebastian Ferdyn <sferdyn@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -26,8 +28,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-16 07:37+0000\n"
-"Last-Translator: Sebastian Ferdyn <sferdyn@gmail.com>\n"
+"PO-Revision-Date: 2014-04-09 10:51+0000\n"
+"Last-Translator: Oliwer C <oliwerc@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/projects/p/yv-backend/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -50,7 +52,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
+"PO-Revision-Date: 2014-03-24 20:30+0000\n"
 "Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
 "Language-Team: Polish (http://www.transifex.com/projects/p/yv-backend/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -95,23 +97,26 @@ msgstr "{name} pobrał przekład, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Pobrałeś przekład, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} rozpoczął plan, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} rozpoczął plan"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Rozpocząłeś plan, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Rozpoczął plan"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} ukończył dzień <b>{day}</b> planu, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} ukończył <b>{segment}</b> dzień planu, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Ukończyłeś dzień <b>{day}</b> planu, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Ukończyłeś <b>{segment}</b> dzień planu, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} ukończył plan, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Dzień {segment} z {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Ukończyłeś plan, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} ukończył plan"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Ukończył plan"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} uzyskał odznaczenie <b>{title}</b>"
