--- a/config/locales/po/pt_PT/api.po
+++ b/config/locales/po/pt_PT/api.po
@@ -3,6 +3,8 @@
 #
 # Translators:
 # Translators:
+# Translators:
+# ptfigueira <ptfigueira@gmail.com>, 2014
 # BadMix <vitor.msilva@gmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -20,8 +22,9 @@
 # BadMix <vitor.msilva@gmail.com>, 2013
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
 # Lisias Loback <lisias@loback.co.uk>, 2013
+# ptfigueira <ptfigueira@gmail.com>, 2013-2014
 # ptfigueira <ptfigueira@gmail.com>, 2013
-# ptfigueira <ptfigueira@gmail.com>, 2013
+# rbmota <rbmota@gmail.com>, 2014
 # BadMix <vitor.msilva@gmail.com>, 2013
 #, fuzzy
 msgid ""
@@ -30,8 +33,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-20 15:32+0000\n"
-"Last-Translator: bcarneiro <barbara@wordrevolution.com>\n"
+"PO-Revision-Date: 2014-04-04 22:20+0000\n"
+"Last-Translator: ptfigueira <ptfigueira@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/yv-backend/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -54,7 +57,7 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 18:03+0000\n"
+"PO-Revision-Date: 2014-03-03 10:48+0000\n"
 "Last-Translator: Lisias Loback <lisias@loback.co.uk>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/yv-backend/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
@@ -99,23 +102,26 @@ msgstr "{name} descarregou a versão, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Você descarregou a versão, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} iniciou o plano, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} começou um plano"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Você iniciou o plano, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Começou um plano"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} completou o dia <b>{day}</b> do plano, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} completou o dia <b>{segment}</b> do plano, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Você completou o dia <b>{day}</b> do plano, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Completou o dia <b>{segment}</b> do plano, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} completou o plano, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Dia {segment} de {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Você completou o plano, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} completou um plano"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Completou um plano"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} ganhou a medalha <b>{title}</b>"
@@ -218,7 +224,7 @@ msgstr "Já tem a App da Bíblia?"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Eu tenho apreciado a App da Bíblia do YouVersion e achei que iria gostar também. Tenho aberto a Bíblia muito mais nos dias que correm, porque é muito fácil de ler, ver, ouvir e partilhar. A app da Biblia até tem planos de leitura, que têm uma seleção de textos escolhidos e à minha espera a cada dia. \n"
+"Eu tenho desfrutado da App da Bíblia do YouVersion e achei que também iria gostar. Abro a Bíblia muito mais nos dias que correm, porque é muito fácil de ler, ver, ouvir e partilhar. A app da Bíblia até tem Planos, que têm uma seleção de textos escolhidos e à minha espera a cada dia. \n"
 "\n"
 "Pode obtê-la (gratuitamente!) para praticamente qualquer dispositivo móvel aqui:"
 
