--- a/config/locales/po/ro/api.po
+++ b/config/locales/po/ro/api.po
@@ -3,8 +3,10 @@
 #
 # Translators:
 # Translators:
+# Translators:
 # Cristian Cotovan <cristi.cotovan@gmail.com>, 2013
-# Nick Negoita <ncnego@gmail.com>, 2013
+# Dragoslav <drsek2@gmail.com>, 2014
+# Nick Negoita <ncnego@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -28,8 +30,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-18 16:10+0000\n"
-"Last-Translator: Nick Negoita <ncnego@gmail.com>\n"
+"PO-Revision-Date: 2014-04-04 08:00+0000\n"
+"Last-Translator: Dragoslav <drsek2@gmail.com>\n"
 "Language-Team: Romanian (http://www.transifex.com/projects/p/yv-backend/language/ro/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -97,23 +99,26 @@ msgstr "{name} a descărcat versiunea, <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Ai descărcat versiunea, <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} a început planul de citire, <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} a început un plan"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Ai început planul de citire, <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Am început un plan"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} a completat ziua <b>{day}</b> din planul de citire, <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} a completat ziua <b>{segment}</b> a planului, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Ai completat ziua <b>{day}</b> din planul de citire, <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Ai completat ziua <b>{segment}</b> din planul <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} a completat planul de citire, <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Ziua {segment} din {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Ai completat planul de citire, <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} a completat un plan"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Am completat un plan"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} a câștigat insigna <b>{title}</b>"
