--- a/config/locales/po/ru/api.po
+++ b/config/locales/po/ru/api.po
@@ -3,7 +3,10 @@
 #
 # Translators:
 # Translators:
-# Vitaliy Kolesov <vitaliy.kolesov@gmail.com>, 2013
+# Translators:
+# Anna.Malevici, 2014
+# Azat Kooman <azatkooman@gmail.com>, 2014
+# Vitaliy Kolesov <vitaliy.kolesov@gmail.com>, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
@@ -16,7 +19,7 @@
 #
 # Translators:
 # Translators:
-# Vitaliy Kolesov <vitaliy.kolesov@gmail.com>, 2013
+# Vitaliy Kolesov <vitaliy.kolesov@gmail.com>, 2013-2014
 #, fuzzy
 msgid ""
 msgstr ""
@@ -24,8 +27,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-19 11:50+0000\n"
-"Last-Translator: Vitaliy Kolesov <vitaliy.kolesov@gmail.com>\n"
+"PO-Revision-Date: 2014-04-09 06:10+0000\n"
+"Last-Translator: Azat Kooman <azatkooman@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/yv-backend/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -48,8 +51,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-04-05 22:50+0000\n"
+"Last-Translator: Vitaliy Kolesov <vitaliy.kolesov@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/projects/p/yv-backend/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -70,7 +73,7 @@ msgid "moment.bookmark.self.title"
 msgstr "Вы добавили <b>{reference_human}</b> в закладки"
 
 msgid "moment.friendship.title"
-msgstr "<b>{friend_name}</b> подружился с {user_name}"
+msgstr "{user_name} и <b>{friend_name}</b> теперь друзья"
 
 msgid "moment.friendship.self.title"
 msgstr "Вы теперь друзья с <b>{friend_name}</b>"
@@ -93,23 +96,26 @@ msgstr "{name} загрузил перевод <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Вы загрузили перевод <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} начал план чтения <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} начал план"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Вы начали план чтения <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Начат план"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} прочитал день <b>{day}</b> плана <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} закончил день <b>{segment}</b> плана, <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Вы прочитали день <b>{day}</b> плана <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Вы закончили день <b>{segment}</b> плана, <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} завершил план чтения <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "День {segment} из {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Вы завершили план чтения <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} завершил план"
+
+msgid "moment.plan_completion.self.title"
+msgstr "План завершён"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} заработал значок <b>{title}</b>"
@@ -206,19 +212,19 @@ msgid "share.invite_sms_prefix"
 msgstr "От {name}:"
 
 msgid "share.invite_sms"
-msgstr "У вас есть приложение Библия от YouVersion? Мне оно очень нравится, должно понравиться и вам! Если у тебя его ещё нет, вот ссылка для загрузки:"
+msgstr "У вас есть приложение Библия от YouVersion? Мне оно очень нравится, должно понравиться и вам! Вот ссылка для загрузки:"
 
 msgid "share.invite_email_subject"
-msgstr "У тебя есть приложение Библия?"
+msgstr "У вас есть приложение Библия?"
 
 msgid "share.invite_email_body"
 msgstr ""
-"Мне очень нравится приложение Библия от YouVersion, думаю, оно понравится и тебе! С этим приложением я открываю Библию намного чаще: читаю, смотрю, слушаю и делюсь избранными отрывками с друзьями. В приложении есть даже планы чтения, помогающие читать Библию каждый день!\n"
+"Мне очень нравится приложение Библия от YouVersion, думаю, оно понравится и вам! С этим приложением я открываю Библию намного чаще: читаю, смотрю, слушаю и делюсь избранными отрывками с друзьями. В приложении есть даже планы чтения, помогающие читать Библию каждый день!\n"
 "\n"
-"Приложение работает почти на любом мобильном устройстве, и главное — оно бесплатно!"
+"Приложение работает почти на любом мобильном устройстве (и главное — оно бесплатно)! Скачать можно здесь:"
 
 msgid "share.invite_twitter"
-msgstr "Приложение Библия от @YouVersion постоянный гость на экране моего телефона. Читай, смотри, слушай, делись с помощью бесплатного приложения:"
+msgstr "Приложение Библия от @YouVersion — постоянный гость на экране моего телефона. Читай, смотри, слушай, делись с помощью бесплатного приложения:"
 
 msgid "share.invite_twitter_direct"
 msgstr "У вас есть приложение Библия от @YouVersion? Мне оно очень нравится, думаю, понравится и вам. Вот ссылка:"
