--- a/config/locales/po/sv/api.po
+++ b/config/locales/po/sv/api.po
@@ -3,21 +3,22 @@
 #
 # Translators:
 # Translators:
-# Magnus Österlund <magnusosterlund78@gmail.com>, 2013
+# Translators:
+# Magnus Österlund, 2013-2014
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
 #
 # Translators:
 # Translators:
 # Translators:
-# Magnus Österlund <magnusosterlund78@gmail.com>, 2013-2014
+# Magnus Österlund, 2013-2014
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
 #
 # Translators:
 # Translators:
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
-# Magnus Österlund <magnusosterlund78@gmail.com>, 2013
+# Magnus Österlund, 2013
 #, fuzzy
 msgid ""
 msgstr ""
@@ -25,8 +26,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-16 23:40+0000\n"
-"Last-Translator: Magnus Österlund <magnusosterlund78@gmail.com>\n"
+"PO-Revision-Date: 2014-04-04 11:40+0000\n"
+"Last-Translator: Magnus Österlund\n"
 "Language-Team: Swedish (http://www.transifex.com/projects/p/yv-backend/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -38,7 +39,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
 "PO-Revision-Date: 2014-03-01 19:50+0000\n"
-"Last-Translator: Magnus Österlund <magnusosterlund78@gmail.com>\n"
+"Last-Translator: Magnus Österlund\n"
 "Language-Team: Swedish (http://www.transifex.com/projects/p/yv-backend/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -94,23 +95,26 @@ msgstr "{name} har laddat ner översättningen <b>{version}</b>"
 msgid "moment.bible.download.self.title"
 msgstr "Du har laddat ner översättningen <b>{version}</b>"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} har startat planen <b>{title}</b>"
+msgid "moment.plan_subscription.title"
+msgstr "{name} har påbörjat en plan"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Du har startat planen <b>{title}</b>"
+msgid "moment.plan_subscription.self.title"
+msgstr "Har påbörjat en plan"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} har fullföljt dag <b>{day}</b> i planen <b>{title}</b>"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} har fullföljt dag <b>{segment}</b> i planen <b>{title}</b>"
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Du har fullföljt dag <b>{day}</b> i planen <b>{title}</b>"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "Du har fullföljt dag <b>{segment}</b> i planen <b>{title}</b>"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} har fullföljt planen <b>{title}</b>"
+msgid "moment.plan_segment_completion.body"
+msgstr "Dag {segment} av {total_segments} ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Du har fullföljt planen <b>{title}</b>"
+msgid "moment.plan_completion.title"
+msgstr "{name} har fullföljt en plan"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Har fullföljt en plan"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} har förtjänat emblemet <b>{title}</b>"
