--- a/config/locales/po/tr/api.po
+++ b/config/locales/po/tr/api.po
@@ -3,7 +3,8 @@
 #
 # Translators:
 # Translators:
-# Josh W <wolfhawke@wolfhawke.com>, 2013
+# Translators:
+# Josh W <wolfhawke@wolfhawke.com>, 2013-2014
 # melekcp <melekcansu@gmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
 # API Strings
@@ -11,7 +12,7 @@
 # Translators:
 # Translators:
 # Translators:
-# Josh W <wolfhawke@wolfhawke.com>, 2013
+# Josh W <wolfhawke@wolfhawke.com>, 2013-2014
 # melekcp <melekcansu@gmail.com>, 2013
 # #-#-#-#-#  share.po (Backend (YouVersion))  #-#-#-#-#
 # App sharing
@@ -27,8 +28,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-11-26 20:06+0000\n"
-"Last-Translator: melekcp <melekcansu@gmail.com>\n"
+"PO-Revision-Date: 2014-04-07 08:30+0000\n"
+"Last-Translator: Josh W <wolfhawke@wolfhawke.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/projects/p/yv-backend/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -39,8 +40,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2014-02-21 21:47+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-03-12 08:10+0000\n"
+"Last-Translator: Josh W <wolfhawke@wolfhawke.com>\n"
 "Language-Team: Turkish (http://www.transifex.com/projects/p/yv-backend/language/tr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -96,23 +97,26 @@ msgstr "{name} <b>{version}</b> çevirisini indirdi"
 msgid "moment.bible.download.self.title"
 msgstr "Siz <b>{version}</b> çevirisini indirdiniz"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} <b>{title}</b> başlıklı okuma planına başladı"
+msgid "moment.plan_subscription.title"
+msgstr "{name} bir okuma planını başladı"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "Siz <b>{title}</b> başlıklı okuma planına başladınız"
+msgid "moment.plan_subscription.self.title"
+msgstr "Okuma planını başlandı"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} <b>{title}</b> okuma planının <b>{day}</b>. gününü tamamladı"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name}, <b>{title}</b> başlıklı okuma planının <b>{segment}</b> gününü tamamladı."
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "Siz <b>{title}</b> okuma planının <b>{day}</b>. gününü tamamladınız"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "<b>{title}</b> başlıklı okuma planının <b>{segment}</b> gününü tamamladınız."
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} <b>{title}</b> başlıklı okuma planını tamamladı"
+msgid "moment.plan_segment_completion.body"
+msgstr "Toplam {total_segments} günden {segment} (%{percent_complete})"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "Siz <b>{title}</b> başlıklı okuma planını tamamladınız"
+msgid "moment.plan_completion.title"
+msgstr "{name} bir okuma planını tamamladı"
+
+msgid "moment.plan_completion.self.title"
+msgstr "Okuma planı tamamlandı"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} <b>{title}</b> rozetini kazandı"
@@ -146,6 +150,21 @@ msgstr "{name} vurgunuz hakkında yorum yaptı: “{comment}”"
 
 msgid "notifications.comments.moment.mine.note"
 msgstr "{name} notunuz hakkında yorum yaptı: “{comment}”"
+
+msgid "notifications.likes.moment.mine.bookmark"
+msgstr "{name} {reference_human} ile ilgili yer iminizi beğendi"
+
+msgid "notifications.likes.moment.mine.highlight"
+msgstr "{name} {reference_human} başlıklı yer iminizi beğendi"
+
+msgid "notifications.likes.moment.mine.note.reference"
+msgstr "{name} {reference_human} konulu notunuzu beğendi"
+
+msgid "notifications.likes.moment.mine.note.title"
+msgstr "{name} “{title}” başlıklı notunuzu beğendi"
+
+msgid "notifications.likes.moment.mine.note.no_title_no_reference"
+msgstr "{name} notunuzu beğendi"
 
 msgid "notifications.comments.moments.friend.owner.bookmark"
 msgstr "{moment_owner_name} de kendi yer imi hakkında yorum yaptı: “{comment}”"
