--- a/config/locales/po/zh_CN/api.po
+++ b/config/locales/po/zh_CN/api.po
@@ -3,6 +3,9 @@
 #
 # Translators:
 # Translators:
+# Translators:
+# Gladys Liew <gladysliew@gmail.com>, 2014
+# jerry cheng <jerrych@gmail.com>, 2014
 # Joe Jiang <lamp.purl@gmail.com>, 2013
 # Nianlan Yang <Nianlan@hotmail.com>, 2013
 # #-#-#-#-#  notifications.po (Backend (YouVersion))  #-#-#-#-#
@@ -21,12 +24,12 @@
 #
 # Translators:
 # Translators:
-# Gladys Liew <gladysliew@gmail.com>, 2013
+# Gladys Liew <gladysliew@gmail.com>, 2013-2014
 # Hang Sun <sunh11373@yahoo.com>, 2013
 # Joe Jiang <lamp.purl@gmail.com>, 2013
 # Kevin Morey <kevin.morey@lifechurch.tv>, 2013
 # Michael HUO <huo@live.cn>, 2013
-# yushengyan2004 <yushengyan2004@gmail.com>, 2013
+# yushengyan2004 <yushengyan2004@gmail.com>, 2013-2014
 # yushengyan2004 <yushengyan2004@gmail.com>, 2013
 #, fuzzy
 msgid ""
@@ -35,8 +38,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: brad.belyeu@lifechurch.tv\n"
 "POT-Creation-Date: 2013-08-30 11:23-0500\n"
-"PO-Revision-Date: 2013-12-26 04:50+0000\n"
-"Last-Translator: Joe Jiang <lamp.purl@gmail.com>\n"
+"PO-Revision-Date: 2014-04-10 07:30+0000\n"
+"Last-Translator: Gladys Liew <gladysliew@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/yv-backend/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -59,8 +62,8 @@ msgstr ""
 "Project-Id-Version: Backend (YouVersion)\n"
 "Report-Msgid-Bugs-To: chris.vaughn@lifechurch.tv\n"
 "POT-Creation-Date: 2013-04-30 11:23-0500\n"
-"PO-Revision-Date: 2014-03-02 16:21+0000\n"
-"Last-Translator: chrisvaughn <chris.vaughn@lifechurch.tv>\n"
+"PO-Revision-Date: 2014-04-09 02:30+0000\n"
+"Last-Translator: yushengyan2004 <yushengyan2004@gmail.com>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/projects/p/yv-backend/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -75,58 +78,61 @@ msgid "moment.system.bible_series_promo.body"
 msgstr "今晚观看<i>圣经系列</i> ！"
 
 msgid "moment.bookmark.title"
-msgstr "{name} 标记了书签 <b>{reference_human}</b>"
+msgstr "{name} 书签标记了 <b>{reference_human}</b>"
 
 msgid "moment.bookmark.self.title"
-msgstr "你加书签标记了 <b>{reference_human}</b>"
+msgstr "您书签标记了 <b>{reference_human}</b>"
 
 msgid "moment.friendship.title"
-msgstr "{user_name} 现在和 <b>{friend_name}</b> 已成为朋友"
+msgstr "{user_name} 加了好友 <b>{friend_name}</b> "
 
 msgid "moment.friendship.self.title"
-msgstr "你现在和 <b>{friend_name}</b> 已成为朋友"
+msgstr "您现在和 <b>{friend_name}</b> 已成为朋友"
 
 msgid "moment.highlight.title"
-msgstr "{name} 高亮标记了 <b>{reference_human}</b>"
+msgstr "{name} 高亮显示了 <b>{reference_human}</b>"
 
 msgid "moment.highlight.self.title"
-msgstr "你高亮标记了 <b>{reference_human}</b>"
+msgstr "您高亮显示了 <b>{reference_human}</b>"
 
 msgid "moment.note.title"
 msgstr "{name} 加了一条笔记，<b>{title}</b>"
 
 msgid "moment.note.self.title"
-msgstr "你加了一条笔记，<b>{title}</b>"
+msgstr "您加了一条笔记，<b>{title}</b>"
 
 msgid "moment.bible.download.title"
 msgstr "{name} 下载了 <b>{version}</b> 译本"
 
 msgid "moment.bible.download.self.title"
-msgstr "你下载了 <b>{version}</b> 译本"
+msgstr "您下载了 <b>{version}</b> 译本"
 
-msgid "moment.reading_plan.subscription.title"
-msgstr "{name} 开始了<b>{title}</b> 计划"
+msgid "moment.plan_subscription.title"
+msgstr "{name} 开始一个读经计划"
 
-msgid "moment.reading_plan.subscription.self.title"
-msgstr "你开始了<b>{title}</b> 计划"
+msgid "moment.plan_subscription.self.title"
+msgstr "开始一个读经计划"
 
-msgid "moment.reading_plan.day.title"
-msgstr "{name} 完成了 <b>{title}</b> 读经计划的第 <b>{day}</b> 天"
+msgid "moment.plan_segment_completion.title"
+msgstr "{name} 完成了读经计划，<b>{title}</b>的第 <b>{segment}</b> 天 "
 
-msgid "moment.reading_plan.day.self.title"
-msgstr "你完成了 <b>{title}</b> 读经计划的第 <b>{day}</b> 天"
+msgid "moment.plan_segment_completion.self.title"
+msgstr "您完成了读经计划，<b>{title}</b>的第 <b>{segment}</b> 天"
 
-msgid "moment.reading_plan.completion.title"
-msgstr "{name} 完成了 <b>{title}</b> 读经计划"
+msgid "moment.plan_segment_completion.body"
+msgstr "{total_segments} 中的第 {segment} 天 ({percent_complete}%)"
 
-msgid "moment.reading_plan.completion.self.title"
-msgstr "你完成了 <b>{title}</b> 读经计划"
+msgid "moment.plan_completion.title"
+msgstr "{name} 完成一个读经计划"
+
+msgid "moment.plan_completion.self.title"
+msgstr "完成一个读经计划"
 
 msgid "moment.badge.earned.title"
 msgstr "{name} 获得了 <b>{title}</b> 勋章"
 
 msgid "moment.badge.earned.self.title"
-msgstr "你获得了 <b>{title}</b> 勋章"
+msgstr "您获得了 <b>{title}</b> 勋章"
 
 msgid "moment.video.watched.title"
 msgstr "{name} 看了 <b>{title}</b>"
@@ -215,25 +221,25 @@ msgid "share.invite_sms_prefix"
 msgstr "来自 {name}："
 
 msgid "share.invite_sms"
-msgstr "您有 YouVersion 的圣经软件吗？我很喜欢它，我想你也会喜欢，这是圣经软件的链接："
+msgstr "你有 YouVersion 的圣经软件吗？我喜欢用，猜想你也会喜欢。这是圣经软件的链接："
 
 msgid "share.invite_email_subject"
-msgstr "您有使用圣经软件吗？"
+msgstr "你有使用圣经软件吗？"
 
 msgid "share.invite_email_body"
 msgstr ""
-"我很喜欢使用 YouVersion 的圣经软件，我想您也会喜欢的。不管是阅读，看视频，听录音或分享经文，这个圣经软件都很好用，所以现在我接触圣经的次数也更多了。圣经软件甚至还包括了读经计划，提供一系列的精选经文，供我每天阅读。\n"
+"我很喜欢使用 YouVersion 的圣经软件，我想你也会喜欢的。不管是阅读，看视频，听录音或分享经文，这个圣经软件都很好用，所以现在我接触圣经的次数也更多了。圣经软件甚至还包括了读经计划，提供一系列的精选经文，供我每天阅读。\n"
 "\n"
-"您可以从这里把圣经软件 (免费的！) 安装到几乎任何移动设备上："
+"你可以从这里获得适用于大多数移动设备的 (免费的！)圣经软件："
 
 msgid "share.invite_twitter"
 msgstr "我将 @YouVersion 的圣经软件常驻在主屏幕上。无论阅读圣经，观看视频，收听录音或分享经文... 都可在这个免费软件中完成："
 
 msgid "share.invite_twitter_direct"
-msgstr "您有 @YouVersion 的圣经软件吗？我很喜欢它，我想您也会喜欢，这是圣经软件的链接："
+msgstr "你有 @YouVersion 的圣经软件吗？我很喜欢用，猜想你也会喜欢，这是圣经软件的链接："
 
 msgid "share.invite_facebook"
 msgstr "我喜爱圣经软件！它真的帮助我使圣经成为我日常生活的一部分。圣经软件能帮我做经文高亮记号，听音频圣经，记录笔记，跟踪灵修计划... 甚至观看视频！快去下载吧（还是免费的）："
 
 msgid "share.invite_facebook_direct"
-msgstr "您有 YouVersion 的圣经软件吗？我很喜欢它，我想您也会喜欢，这是圣经软件的链接："
+msgstr "你有 YouVersion 的圣经软件吗？我很喜欢用，猜想你也会喜欢。这是圣经软件的链接："
